import { PaymentMethod } from "./method";

export class HoldMethod implements PaymentMethod {
}