@startuml main
' 支付方式
interface PaymentMethod
class HoldMethod
class DirectMethod {
    - bank
    - account
}
class MailMethod {
    - address
}
PaymentMethod <|-- HoldMethod
PaymentMethod <|-- DirectMethod
PaymentMethod <|-- MailMethod

' 薪水類別
abstract class PaymentClassification
class HourlyClassification {
    - hourlyRate
}
class SalariedClassification {
    - salary
}
class CommissionedClassification {
    - salary
    - commissionRate
}
class TimeCard
class SalesReceipt
PaymentClassification <|-- HourlyClassification
PaymentClassification <|-- SalariedClassification
PaymentClassification <|-- CommissionedClassification
HourlyClassification --> "0..*" TimeCard
CommissionedClassification --> "0..*" SalesReceipt

' 工會類別
interface Affiliation
note right of Affiliation
    使用 NULL OBJECT 模式解決程式碼的例外處理
end note
class NoAffiliation
class UnionAffiliation {
    - memberId
    - dues
}
class ServiceCharge
UnionAffiliation --> "0..*" ServiceCharge
Affiliation <|-down- NoAffiliation
Affiliation <|-- UnionAffiliation

' 主要的類別
class Employee
Employee -down-> PaymentClassification
Employee -left-> PaymentMethod
Employee -right-> Affiliation
@enduml